# DeePyMoD

./: .gitignore  404.html  LICENSE.txt  README.md  index.html  mkdocs.yml  setup.cfg  setup.py  sitemap.xml
.github/workflows/: lint-black.yml  python-test-publish.yml
api/analysis/: index.html
api/constraint/: index.html
api/convergence/: index.html
api/data/base/: index.html
api/deepmod/: index.html
api/func_approx/: index.html
api/lib/: index.html
api/spars_sched/: index.html
api/sparse/: index.html
api/training/: index.html
background/background/: index.html
background/deepmod/: index.html
background/group_sparsity/: index.html
data/: keller_segel.npy
docs/: index.md
docs/api/: analysis.md  constraint.md  convergence.md  deepmod.md  func_approx.md  lib.md  spars_sched.md  sparse.md  training.md
docs/background/: background.md  deepmod.md  group_sparsity.md
docs/datasets/: data.md
examples/: New_Burgers.ipynb  New_Burgers.py  ODE_2DOF_sparsity.ipynb  ODE_Couple_spring_mass.ipynb  ODE_Example_Maxwell_model.ipynb  ODE_Example_coupled_nonlin.ipynb  ODE_Example_coupled_nonlin.py  ODE_Example_coupled_nonlin_norm.ipynb  ODE_Logistic_equation.ipynb  ODE_Lotka_Voltera.ipynb  ODE_Lotka_Voltera_unnorm.ipynb  ODE_Lotka_Volterra.ipynb  PDE_2D_Advection-Diffusio_noisy.ipynb  PDE_2D_Advection-Diffusion.ipynb  PDE_2D_Advection-Diffusion.py  PDE_2D_Reaction_Diffusion.ipynb  PDE_Allen_Cahn.ipynb  PDE_Allen_Cahn_noisy.ipynb  PDE_Burgers.ipynb  PDE_Burgers_Sine.ipynb  PDE_Burgers_noise.ipynb  PDE_Cahn_Hilliard_Sine.ipynb  PDE_Chafee_Infante.ipynb  PDE_KdV.ipynb  PDE_KdV_noisy.ipynb  PDE_Kuramoto_Sivashinsky.ipynb  PDE_Kuramoto_Sivashinsky_Chaotic.ipynb  PDE_Kuramoto_Sivashinsky_Cos.ipynb  PDE_Kuramoto_Sivashinsky_noise.ipynb  PDE_keller_segel.ipynb  Turing_siplified.ipynb  Turing_siplified_2D.ipynb  VE_datagen.py  reaction_diffusion.py
examples/2DAD/: AD_sensor_density.ipynb  AD_sensor_density_set2_default_take5-3-1.ipynb  experimental_2DAD.npy
examples/Akshay/: cable_data.ipynb  testing.ipynb
examples/Differentiation_comparison/: PDE_2D_Advection-Diffusion.ipynb
examples/data/: burgers.npy
paper/Advection_diffusion/: 15-19-25.ipynb  Analysis.ipynb
paper/Cable_equation/: cable_compare.mat  cable_data_13.ipynb  cable_data_4elements.ipynb  cable_data_7elements.ipynb  compare.ipynb
scratch/: Dataset.ipynb
search/: search_index.json
src/DeePyMoD.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/deepymod/: __init__.py
src/deepymod_torch/: __init__.py
tests/: Untitled.ipynb  burgers.py  dataset.ipynb  diffusion.py  keller_segel.py  new_version.py  ridge.py
(+1778 files in other folders)
